Add other DTOs to create full data model
- Fix images on About page

--- a/webapp/Accessible.Core/Accessible.Core.csproj
+++ b/webapp/Accessible.Core/Accessible.Core.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.3" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectCapability Include="CSharp;Managed;ClassDesigner" />
+  </ItemGroup>
 
 </Project>
